--- a/package.json
+++ b/package.json
@@ -50,5 +50,7 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "antd": "^4.8.2"
+  }
 }
