--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "build": "yarn run clean-dist && webpack -p --config=configs/webpack/prod.js",
-    "start": "yarn run start-dev",
-    "start-dev": "webpack-dev-server --config=configs/webpack/dev.js",
+    "start": "yarn run start-dev ",
+    "start-dev": "webpack-dev-server --config=configs/webpack/dev.js ",
     "start-prod": "yarn run build && node express.js",
     "test": "jest --coverage --watchAll --config=configs/jest.json"
   },
@@ -33,6 +33,7 @@
     "image-webpack-loader": "^7.0.1",
     "imagemin-gifsicle": "6.0.1",
     "jest": "^26.6.1",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
     "react": "^17.0.1",
