--- a/package.json
+++ b/package.json
@@ -5,24 +5,38 @@
     "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "antd": "^4.12.3",
+    "babel": "^6.23.0",
+    "from": "^0.1.7",
+    "import": "^0.0.6",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "rollup-plugin-babel": "^4.4.0",
     "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
     "@rollup/plugin-alias": "^3.1.2",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "autoprefixer": "^10.2.4",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "jest": "^26.6.3",
+    "postcss": "^8.2.6",
     "styled-components": "^5.2.1",
+    "ts-jest": "^26.5.5",
     "typescript": "^4.1.2",
-    "vite": "^2.0.5",
-    "postcss": "^8.2.6"
+    "vite": "^2.0.5"
   }
 }
