--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,13 @@
 {
     "presets": [
-        "@babel/preset-env",
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": "current"
+                }
+            }
+        ],
         "@babel/preset-typescript"
-    ],
-    "plugins": [
-        "transform-es2015-modules-commonjs"
     ]
 }
