--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,13 @@
+# dependencies
+/node_modules
+
+# misc
 .DS_Store
-node_modules
-/dist
 
-/tests/e2e/videos/
-/tests/e2e/screenshots/
+# ide
+.idea/
 
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
+# log
 yarn-error.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-.history
