--- a/package.json
+++ b/package.json
@@ -1,42 +1,22 @@
 {
-  "name": "json-compare",
-  "version": "0.0.0",
+  "name": "serverless-react-ssr",
+  "version": "1.0.0",
+  "description": "demo for react-ssr",
+  "main": "server.js",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "stage=local node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@gitlab.qunhequnhe.com:fe/feinfra/demo-serverless/serverless-react-ssr.git"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "antd": "^4.15.2",
-    "babel": "^6.23.0",
-    "from": "^0.1.7",
-    "import": "^0.0.6",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "tailwindcss": "^2.1.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
-    "@rollup/plugin-alias": "^3.1.2",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.41",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/styled-components": "^5.1.9",
-    "@vitejs/plugin-react-refresh": "^1.3.2",
-    "autoprefixer": "^10.2.5",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "jest": "^26.6.3",
-    "postcss": "^8.2.10",
-    "styled-components": "^5.2.3",
-    "ts-jest": "^26.5.5",
-    "typescript": "^4.2.4",
-    "vite": "^2.2.1"
+    "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
+    "ip": "^1.1.5"
   }
 }
